# multi-agent-ai-newsletter

./: .env  .gitignore  LICENSE  README.md  fetched_news_task.md  file_io.py  football_newsletter.md  football_newsletter_1.md  pyproject.toml
.ipynb_checkpoints/: football_newsletter-checkpoint.md
src/ai_football_newsletter/: crew.py  football_newsletter.md  main.py
src/ai_football_newsletter/config/: agents.yaml  tasks.yaml
src/ai_football_newsletter/tools/: search_tools.py
